# mvin

./: .coverage  .gitignore  API_STABILITY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  bitbucket-pipelines.yml  manualtest.py  pyproject.toml  pytest.ini  test.sh
.github/workflows/: ci.yml  release.yml
src/mvin/: __init__.py  excel_ops.py  interpreter.py
src/mvin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mvin/functions/: excel_lib.py
tests/: test_excel_lib.py  test_excel_lib_search.py  test_excel_lib_text.py  test_excel_ops.py  test_interpreter.py  test_interpreter_core.py  test_interpreter_elibs.py  test_interpreter_execution.py  test_interpreter_ops.py  test_interpreter_property.py  test_interpreter_syntax.py  test_token_types.py
