# SPDX-FileCopyrightText: 2025 Jose Gonzalo Covarrubias
[project]
name = "mvin"
authors = [
  {name = "Jose Gonzalo Covarrubias", email = "gocova.dev@gmail.com"},
]
description = "Minimum Viable Interpreter (for single Excel formulas)"
license = "MIT OR Apache-2.0"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
dependencies = []
dynamic = ["version"]
requires-python = ">=3.9,<4.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  # "License :: OSI Approved :: MIT License",
  # "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# Issues = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
venvPath = "."
venv = "venv"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[dependency-groups]
dev = [
  "neovim>=0.3.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
]

[tool.pdm.dev-dependencies]
build = [
  "setuptools",
  "meson-python>=0.16.0",
  "ninja>=1.8.2"
]
test = [
  "pytest",
  "pytest-cov"
]

[tool.pdm]
version = { source = "file", path = "src/mvin/__init__.py" }
distribution = true
